--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.android.alekhya.revisionv3">
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
-        android:allowBackup="true"
         android:name=".BaseApplication"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -59,7 +59,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MediaVedio">
+        <activity android:name=".MediaVideo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -104,6 +104,27 @@
             </intent-filter>
         </activity>
         <activity android:name=".quiz.ConceptActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".quiz.ResultActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".quiz.ViewAnsweractivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Images">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
