--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
+    buildToolsVersion "26.0.2"
+    dataBinding.enabled = true
     defaultConfig {
         applicationId "com.android.alekhya.revisionv3"
         minSdkVersion 16
